<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/linear_layout"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/notification_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_notification_title" />

    <EditText
        android:id="@+id/notification_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_notification_description" />

    <Button
        android:id="@+id/send_notification_channel_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_via_channel_1" />

    <Button
        android:id="@+id/send_notification_channel_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_via_channel_2" />

</LinearLayout>