<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".work_manager.BlurActivity">

    <ImageView
        android:id="@+id/selected_image"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@color/purple_500"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/select_blur_amount_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/select_blur_amount_text"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/blur_amount_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio_button_lv_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_lv_1_text" />

        <RadioButton
            android:id="@+id/radio_button_lv_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_lv_2_text" />

        <RadioButton
            android:id="@+id/radio_button_lv_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_lv_3_text" />

    </RadioGroup>

    <Button
        android:id="@+id/blur_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/go_text" />

</LinearLayout>